--- a/.env
+++ b/.env
@@ -1,10 +1,3 @@
-# CICD pipeline environment variables.
+# Shared environment variables.
 PROJECT_NAME=tanstack-start-template
 DOCKER_REGISTRY=192.168.1.30:5000
-
-# Image versions.
-# By default, minor get updated automatically.
-# If you need to change major, just set the version here (e.g., service_VERSION=2).
-drizzle_VERSION=1.0.0
-database_VERSION=1.7.0
-app_VERSION=1.0.0
