Load all secrets in app

--- a/apps/tanstack-start-template/Dockerfile
+++ b/apps/tanstack-start-template/Dockerfile
@@ -15,7 +15,7 @@ RUN npm install -g pino-pretty
 EXPOSE 3000
 
 # Load secrets.
-ENTRYPOINT ["/bin/bash", "-c", "source /usr/local/bin/load-secrets.sh DB_PASSWORD && exec \"$@\"", "--"]
+ENTRYPOINT ["/bin/bash", "-c", "source /usr/local/bin/load-secrets.sh DB_PASSWORD BETTER_AUTH_SECRET SMTP_PASSWORD && exec \"$@\"", "--"]
 
 # Set the command to run the application.
 CMD ["npm", "run", "start"]
