Put public url for logo in emails

--- a/apps/tanstack-start-template/.env
+++ b/apps/tanstack-start-template/.env
@@ -4,7 +4,7 @@ VITE_LOG_LEVEL=debug
 ## Server environment variables.
 LOG_LEVEL=debug
 
-PUBLIC_BASEURL=https://localhost:3000
+PUBLIC_BASEURL=https://donut.yaoshiko.com
 # Auth.
 BETTER_AUTH_COOKIE_CACHE=300
 
