Refactor local vars, fix auth url

--- a/apps/tanstack-start-template/.env
+++ b/apps/tanstack-start-template/.env
@@ -1,18 +1,10 @@
 ## Client environment variables.
-VITE_LOG_LEVEL=debug
+VITE_LOG_LEVEL=info
 
 ## Server environment variables.
-LOG_LEVEL=debug
+LOG_LEVEL=info
 
 PUBLIC_BASEURL=https://donut.yaoshiko.com
-# Auth.
-BETTER_AUTH_COOKIE_CACHE=300
-
-# Data layer.
-DB_HOST=localhost
-DB_PORT=5432
-DB_USER=app
-DB_NAME=tanstack-start-template
 
 # Mail service.
 SMTP_SERVICE=gmail
