--- a/tools/deploy/.env
+++ b/tools/deploy/.env
@@ -1,5 +1,6 @@
 # Infrastructure environment variables.
 DB_NAME=tanstack-start-template
 DB_USER=app
+PUBLIC_HOSTNAME=donut.yaoshiko.com
 PUBLIC_BASEURL=https://donut.yaoshiko.com
 ACME_EMAIL=nicola.barletta@outlook.it
