--- a/tools/deploy/docker-swarm-template.yml
+++ b/tools/deploy/docker-swarm-template.yml
@@ -7,39 +7,6 @@ x-load-secrets-config: &load-secrets-config
       mode: 0555
 
 services:
-  traefik:
-    image: traefik:v3.3.6
-    labels:
-      - 'traefik.enable=true'
-      - 'traefik.http.routers.traefik.service=api@internal'
-      - 'traefik.http.routers.traefik.entrypoints=websecure'
-      - 'traefik.http.routers.traefik.tls.certresolver=myresolver'
-    command:
-      - '--providers.docker.swarmMode=true'
-      - '--providers.docker.exposedbydefault=false'
-      - '--entrypoints.web.address=:80'
-      - '--entrypoints.websecure.address=:443'
-      - '--entrypoints.web.http.redirections.entryPoint.to=websecure'
-      - '--entrypoints.web.http.redirections.entryPoint.scheme=https'
-      - '--certificatesresolvers.myresolver.acme.tlschallenge=true'
-      - '--certificatesresolvers.myresolver.acme.email=${ACME_EMAIL}'
-      - '--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json'
-      - '--api.dashboard=true'
-    ports:
-      - '80:80'
-      - '443:443'
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-      - traefik-certificates:/letsencrypt
-    networks:
-      - traefik
-    deploy:
-      mode: global
-      restart_policy:
-        condition: on-failure
-    environment:
-      ACME_EMAIL: ${ACME_EMAIL}
-
   postgres:
     image: ${DOCKER_REGISTRY}/${PROJECT_NAME}/database:${database_VERSION}
     secrets:
@@ -95,13 +62,46 @@ services:
       DB_PORT: 5432
     labels:
       - 'traefik.enable=true'
-      - 'traefik.http.routers.app.rule=Host(`${PUBLIC_BASEURL}`)'
+      - 'traefik.http.routers.app.rule=Host(`${PUBLIC_HOSTNAME}`)'
       - 'traefik.http.routers.app.entrypoints=websecure'
       - 'traefik.http.routers.app.tls.certresolver=myresolver'
     depends_on:
       - drizzle
     networks:
       - app-network
+      - traefik
+
+  traefik:
+    image: traefik:v3.3.6
+    labels:
+      - 'traefik.enable=true'
+      - 'traefik.http.routers.traefik.service=api@internal'
+      - 'traefik.http.routers.traefik.entrypoints=internal'
+    command:
+      - '--providers.docker.swarmMode=true'
+      - '--providers.docker.exposedbydefault=false'
+      - '--entrypoints.web.address=:80'
+      - '--entrypoints.websecure.address=:443'
+      - '--entrypoints.internal.address=:8080'
+      - '--entrypoints.web.http.redirections.entrypoint.to=websecure'
+      - '--entrypoints.web.http.redirections.entrypoint.scheme=https'
+      - '--certificatesresolvers.myresolver.acme.tlschallenge=true'
+      - '--certificatesresolvers.myresolver.acme.email=${ACME_EMAIL}'
+      - '--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json'
+      - '--api.dashboard=true'
+    ports:
+      - '80:80'
+      - '443:443'
+      - '8080:8080'
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - traefik-certificates:/letsencrypt
+    networks:
+      - traefik
+    deploy:
+      mode: global
+      restart_policy:
+        condition: on-failure
 
 volumes:
   postgres_data:
