Added missing secret ref

--- a/tools/deploy/docker-swarm-template.yml
+++ b/tools/deploy/docker-swarm-template.yml
@@ -125,6 +125,8 @@ secrets:
     external: true
   ${PROJECT_NAME}_SMTP_PASSWORD:
     external: true
+  ${PROJECT_NAME}_CF_DNS_API_TOKEN:
+    external: true
 
 configs:
   load-secrets.sh:
