WIP Traefik dashboard

--- a/tools/deploy/docker-swarm-template.yml
+++ b/tools/deploy/docker-swarm-template.yml
@@ -110,7 +110,7 @@ services:
     deploy:
       labels:
         - 'traefik.enable=true'
-        - 'traefik.http.routers.traefik.rule=Host(*)'
+        - 'traefik.http.routers.traefik.rule=PathPrefix(`/`)'
         - 'traefik.http.routers.traefik.service=api@internal'
         - 'traefik.http.routers.traefik.entrypoints=internal'
         - 'traefik.http.services.traefik.loadbalancer.server.port=8080'
