Try without host rules

--- a/tools/deploy/docker-swarm-template.yml
+++ b/tools/deploy/docker-swarm-template.yml
@@ -72,7 +72,7 @@ services:
     deploy:
       labels:
         - 'traefik.enable=true'
-        - 'traefik.http.routers.app.rule=Host(`${PUBLIC_HOSTNAME}`)'
+        - 'traefik.http.routers.app.rule=PathPrefix(`/`)'
         - 'traefik.http.routers.app.entrypoints=websecure'
         - 'traefik.http.routers.app.tls.certresolver=myresolver'
         - 'traefik.http.services.app.loadbalancer.server.port=3000'
