--- a/apps/tanstack-start-template/.env
+++ b/apps/tanstack-start-template/.env
@@ -7,10 +7,7 @@ LOG_LEVEL=info
 PUBLIC_BASEURL=https://donut.yaoshiko.com
 
 # Mail service.
-SMTP_SERVICE=gmail
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=n.barletta95@gmail.com
+SMTP_USER=donut@yaoshiko.com
 
 # App-specific options.
 FETCH_RECIPES_DELAY=0
