WIP  github runner

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # Shared environment variables.
 PROJECT_NAME=tanstack-start-template
 DOCKER_REGISTRY=192.168.1.30:5000
+PORTAINER_WEBHOOK=https://192.168.1.30:9443/api/stacks/webhooks/5daf8550-c82b-4586-90c4-1c2050fcb448
