--- a/tools/deploy/moon.yml
+++ b/tools/deploy/moon.yml
@@ -12,8 +12,7 @@ tasks:
   deploy-local:
     description: Deploy the app to local Docker Swarm.
     deps:
-      - '^:docker-push'
-      - '~:deploy'
+      - '~:setup-docker-swarm'
     local: true
     command: docker stack deploy -c docker-swarm.yml $PROJECT_NAME
 
@@ -22,7 +21,7 @@ tasks:
     local: true
     command: docker stack rm $PROJECT_NAME
 
-  deploy:
+  setup-docker-swarm:
     description: Update Docker Swarm template.
     inputs:
       - '/.versions'
@@ -33,3 +32,10 @@ tasks:
     deps:
       - '^:docker-push'
     command: bash $workspaceRoot/scripts/prepare-docker-swarm.sh $workspaceRoot/.versions
+
+  deploy:
+    description: Trigger a Portainer redeploy on deploy branch.
+    local: true
+    inputs:
+      - '/scripts/deploy.sh'
+    command: bash $workspaceRoot/scripts/deploy.sh
