--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,9 @@ jobs:
       - name: Install pnpm
         run: npm i -g pnpm
 
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
       - name: Trigger Portainer Stack Redeploy
         id: redeploy
         run: pnpm moon :deploy
