--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,17 +60,23 @@ jobs:
       - name: Check affected projects
         id: affected-check
         run: |
-          # Get affected projects
-          AFFECTED_PROJECTS=$(pnpm moon query projects --affected --json)
-          echo "affected-projects=$AFFECTED_PROJECTS" >> $GITHUB_OUTPUT
+          # Get affected projects and handle Moon's JSON format properly
+          AFFECTED_OUTPUT=$(pnpm moon query projects --affected --json)
+
+          # Extract just the project IDs from Moon's JSON response
+          AFFECTED_COUNT=$(echo "$AFFECTED_OUTPUT" | jq '.projects | length')
+          AFFECTED_IDS=$(echo "$AFFECTED_OUTPUT" | jq -r '.projects[].id' | tr '\n' ',' | sed 's/,$//')
+
+          echo "affected-count=$AFFECTED_COUNT" >> $GITHUB_OUTPUT
+          echo "affected-ids=$AFFECTED_IDS" >> $GITHUB_OUTPUT
 
           # Check if any projects are actually affected
-          if [ "$AFFECTED_PROJECTS" = "[]" ]; then
+          if [ "$AFFECTED_COUNT" -eq 0 ]; then
             echo "has-affected=false" >> $GITHUB_OUTPUT
             echo "No projects affected, skipping builds"
           else
             echo "has-affected=true" >> $GITHUB_OUTPUT
-            echo "Affected projects: $AFFECTED_PROJECTS"
+            echo "Found $AFFECTED_COUNT affected projects: $AFFECTED_IDS"
           fi
 
       - name: Run affected tests
