--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,8 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: 'moonrepo/setup-toolchain@v0'
+      - name: Setup Moon toolchain
+        uses: 'moonrepo/setup-toolchain@v0'
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
